<resources>
    <string name="action">action</string>
    <string name="action_hint">What action did you take?</string>
    <string name="app_name">Life Balance</string>
    <string name="actions">Actions</string>
    <string name="blank_field_message">Please do not leave any field blank</string>
    <string name="change">Change</string>
    <string name="chart">Chart</string>
    <string name="confirm">Confirm</string>
    <string name="default_life_area_1">health</string>
    <string name="default_life_area_2">family</string>
    <string name="default_life_area_3">work</string>
    <string name="default_life_area_4">friends</string>
    <string name="default_life_area_5">learning</string>
    <string name="default_life_area_6">finances</string>
    <string name="inspire_me">Inspire Me!</string>
    <string name="life_areas">Life Areas</string>
    <string name="new_line">\n</string>
    <string name="number_of_documents">numberOfDocuments</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="save">Save</string>
    <string name="success_message">Your action has been saved!</string>
    <string name="suggestion_line_1">One area that needs attention is</string>
    <string name="suggestion_line_2">A past action is</string>
    <string name="video_default">8KkKuTCFvzI</string>
    <string name="video_family">KktuoQwb3vQ</string>
    <string name="video_finances">PsihkFWDt3Y</string>
    <string name="video_friends">rFpDK2KhAgw</string>
    <string name="video_health">PI5V1-IFvlI</string>
    <string name="video_learning">5MgBikgcWnY</string>
    <string name="video_title">You are watching a video about %1$s</string>
    <string name="video_work">rrkrvAUbU9Y</string>
    <string name="warning_message">This action will reset chart values to 0. Would you like to continue?</string>
    <string name="your_life_areas">Your Life Areas</string>
</resources>