<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LifeAreas">

    <TextView
        android:id="@+id/displayLifeAreasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lifeArea1EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lifeArea1EditText"
        android:hint="@string/default_life_area_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/lifeArea2EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayLifeAreasTextView" />

    <EditText
        android:id="@+id/lifeArea2EditText"
        android:hint="@string/default_life_area_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/lifeArea3EditText"
        app:layout_constraintTop_toBottomOf="@+id/lifeArea1EditText"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/lifeArea3EditText"
        android:hint="@string/default_life_area_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/lifeArea4EditText"
        app:layout_constraintTop_toBottomOf="@+id/lifeArea2EditText"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/lifeArea4EditText"
        android:hint="@string/default_life_area_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/lifeArea5EditText"
        app:layout_constraintTop_toBottomOf="@+id/lifeArea3EditText"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/lifeArea5EditText"
        android:hint="@string/default_life_area_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/lifeArea6EditText"
        app:layout_constraintTop_toBottomOf="@+id/lifeArea4EditText"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/lifeArea6EditText"
        android:hint="@string/default_life_area_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/lifeArea5EditText"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/activeTab"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/changeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifeArea6EditText" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/change"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/activeTab"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/restoreDefaultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/restore_defaults"
        android:textAllCaps="false"
        android:textColor="@color/activeTab"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>